# frc-docs

./: .gitignore  .reviewdog.yml  CLAUDE.md  MISSING_PYTHON_EXAMPLES.md  Makefile  PYTHON_EXAMPLES_ANALYSIS.md  Pipfile  README.md  SYSTEMCORE_RESEARCH_NOTES.md  azure-pipelines.yml  contributing.md  doc8.ini  environment.yml  gitignore  make.bat  miktex-packages.txt  missing_python_simple_list.txt  pyproject.toml  readthedocs.yml
.azure-templates/: steps-requirements.yml
.claude/: settings.local.json
.github/: labeler.yml
.github/workflows/: CI.yaml  CI.yml  Publish.yaml  base-branch.yml  inspector.json  labeler.yml  link-check-2027.yml  link-check.yml  misspell-fixer.yaml  misspell.yaml  publish_stable.yml  publish_year.yml  update-rli-commands.yml  update-rli.yml  update-translations.yml
.tx/: config
linter/: README.md  requirements.txt  setup.py
linter/ohnoyoudidnt/: checks.py
linter/tests/: conftest.py  test_all.py
scripts/: check_codeblock_coverage.py  doc8_redown.py  imagesizechecker.py  imageusagechecker.py  install-rsvg-convert.ps1  verify-literal-check.py
source/: 404.rst  api-docs-redirect.rst  conf.py  contributing.rst  cpp-api-docs-redirect.rst  document-reference-list.txt  hardware.rst  index.rst  java-api-docs-redirect.rst  kop-item-resources.rst  networking.rst  redirects.txt  requirements.rst  requirements.txt  software.rst  temp.md
source/Install_Guides/: MacOS.md  Windows.md  Windows.rst
source/Installing C++ and Java Development Tools for FRC/: MacOS.md  Windows.md
source/Pneumatics/: pneumatics.rst
source/_ext/: remoteliteralinclude.py
source/_extensions/: _remoteliteralinclude.py  default_latex_image_settings.py  delta2.py  localization.py  minify.py  post_process.py  redown.py  responsive_images.py  rtd_patch.py  sphinx_toctreeish.py  wpilib_release.py
source/_extensions/controls_js_sim/: .gitignore  __init__.py  controls_js_build.py  dynamic-shooting.js  flywheel-bangbang.js  newton-shooting.js  vertical-elevator-pidf.js
source/_extensions/post_process_tasks/: fontawesome.py  systemfonts.py
source/_static/: manifest.json  scorer.js
source/_static/css/: frc-furo.css  frc-rtd.css  frc-rtl.css  pid-tune.css
source/_static/js/: api-docs-redirect.js  external-links-new-tab.js  fix-rtd-menu-ios.js  italicize_first.js  manup.min.js  pid-tune.js  version-2014.js
source/_templates/: base.html  breadcrumbs.html  layout.html
source/_templates/sidebar/: brand.html
source/assets/: frc-docs-banner.psd  test.drawio  unique_words.txt
source/commandbased/: commandbased.md
source/docs/2020-overview/: 2020-Game-Data.rst  index.rst  known-issues.rst  new-for-2020.rst
source/docs/Install_Guides/: MacOS.rst
source/docs/contributing/: build-instructions.rst  contribution-guidelines.rst  drawio-saving-instructions.rst  style-guide.rst  top-contributors.rst  watching-changes.rst
source/docs/controls-overviews/: control-system-hardware.rd  control-system-hardware.rst  control-system-software.rd  control-system-software.rst
source/docs/getting-started-guide/: index.rst
source/docs/hardware/: actuator-overview.md  can-addressing.rst  how-to-wire-a-robot.rst  preemptive-troubleshooting.rst  roborio.ai  solenoids.rst  status-lights-ref.rst  wiring-a-robot.md  wiring-best-practices.rst  wiring-pneumatics.rst
source/docs/install-guides/: FRC-Update-Suite.rst  Linux.rst  MacOS.rst  Windows.rst  frc-update-suite.rst  imaging-your-classmate.rst  imaging-your-roborio.rst  linux.rst
source/docs/legacy/: index.rst
source/docs/legal/: privacy-policy.rst
source/hiddentocs/: dashboards.rst
source/pneumatics/: pneumatics.md
source/sphinxext/: minify.py
source/stubs/: advanced-programming-stub.rst  api-docs-stub.rst  contributing-stub.rst  hardware-stub.rst  programming-basics-stub.rst  returning-teams-stub.rst  software-tools-stub.rst
(+1806 files in other folders)
