[project]
name = "frc-docs"
version = "9999"
description = ""
authors = []
requires-python = ">=3.9,<3.13"
dependencies = [
    "black==24.4.2",
    "doc8==1.1.2",
    "docutils==0.21.2",
    "fonttools[woff]==4.43.0",
    "jsmin==3.0.1",
    "markdown2==2.4.6",
    "numpy>=1.26.2, <2.0.0",
    "scipy>=1.9.0, <2.0.0",
    "sphinx==7.4.7",
    "sphinx_design==0.6.1",
    "sphinx_copybutton==0.5.2",
    "sphinx-hoverxref==1.4.0",
    "sphinx-last-updated-by-git==0.3.8",
    "sphinx-notfound-page==1.0.4",
    "sphinx-tabs==3.4.5",
    "sphinx-toolbox==3.8.0",
    "modern-sphinx-version-warning==1.1.6",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-svg2pdfconverter==1.2.2",
    "sphinxcontrib-video==0.4.1",
    "sphinx_contributors==0.2.7",
    "sphinxext-delta==0.3.1",
    "sphinxext-mimic==0.1.1",
    "sphinxext-opengraph==0.10.0",
    "sphinxext-photofinish==0.1.11",
    "sphinxext-rediraffe==0.2.7",
    "sphinxext-remoteliteralinclude==0.6.0",
    "sphinxext-toptranslators==0.1.3",
    "urllib3==2.5.0",
    "frccontrol==2023.28",
    "furo==2024.08.06",
    "sphinx-build-compatibility",
    "jinja2==3.1.6",
    "requests==2.32.4",
]

[tool.uv]
fork-strategy = "fewest"

[tool.uv.sources]
sphinx-build-compatibility = { git = "https://github.com/readthedocs/sphinx-build-compatibility" }

