[project]
name = "frc-docs"
version = "9999"
description = ""
authors = []
requires-python = ">=3.10,<3.14"
dependencies = [
    "black>=25.0.0,<26.0.0",
    "doc8==2.0.0",
    "docutils==0.21.2",
    "fonttools[woff]==4.60.2",
    "jsmin==3.0.1",
    "markdown2==2.5.4",
    "sphinx==7.4.7",
    "sphinx_design==0.6.1",
    "sphinx_copybutton==0.5.2",
    "sphinx-hoverxref==1.4.2",
    "sphinx-last-updated-by-git==0.3.8",
    "sphinx-notfound-page==1.1.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-tabs==3.4.5",
    "sphinx-toolbox==3.10.0",
    "modern-sphinx-version-warning==1.1.6",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-svg2pdfconverter==1.3.0",
    "sphinxcontrib-video==0.4.1",
    "sphinx_contributors==0.2.7",
    "sphinxext-delta==0.3.1",
    "sphinxext-mimic==0.1.1",
    "sphinxext-opengraph==0.13.0",
    "sphinxext-photofinish==0.1.12",
    "sphinxext-rediraffe==0.2.7",
    "sphinxext-remoteliteralinclude==0.6.0",
    "sphinxext-toptranslators==0.1.3",
    "frccontrol==2025.6",
]

[tool.uv]
fork-strategy = "fewest"
