[project]
name = "frc-docs"
version = "9999"
description = ""
authors = []
requires-python = ">=3.12,<3.15"
dependencies = [
    "black>=26.0.0,<27.0.0",
    "doc8==2.0.0",
    "docutils==0.21.2",
    "fonttools[woff]==4.60.2",
    "jsmin==3.0.1",
    "markdown2==2.5.5",
    "sphinx==8.2.3",
    "sphinx_design==0.7.0",
    "sphinx_copybutton==0.5.2",
    "sphinx-hoverxref==1.4.2",
    "sphinx-last-updated-by-git==0.3.8",
    "sphinx-notfound-page==1.1.0",
    "sphinx-tabs==3.4.5",
    "sphinx-toolbox==4.1.2",
    "modern-sphinx-version-warning==1.1.6",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-svg2pdfconverter==2.1.0",
    "sphinxcontrib-video==0.4.2",
    "sphinx_contributors==0.3.0",
    "sphinxext-delta==0.4.0",
    "sphinxext-mimic==0.1.1",
    "sphinxext-opengraph==0.13.0",
    "sphinxext-photofinish==0.1.11",
    "sphinxext-rediraffe==0.3.0",
    "sphinxext-remoteliteralinclude==0.6.1",
    "sphinxext-toptranslators==0.1.3",
    "frccontrol==2026.11",
    "furo==2025.12.19",
    "sphinx-build-compatibility",
]

[tool.uv]
fork-strategy = "fewest"

[tool.uv.sources]
sphinx-build-compatibility = { git = "https://github.com/readthedocs/sphinx-build-compatibility" }

